--- a/Enterprise sales management system/.project
+++ b/Enterprise sales management system/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Dinosaur</name>
+	<name>Enterprise sales management system</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1600825542447</id>
+			<id>1600825542453</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
